# mcp-pdf-reader

./: README.md  mcp-pdf-reader.py  mcp_pdf_reader.py  pyproject.toml
