[project]
name = "mcp-pdf-reader"
version = "0.1.0"
description = "An MCP enabled PDF reader"
authors = [
  { name = "David Poole", email = "david.poole@safeswisscloud.ch" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mcp-pdf = "pdf-mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
